--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
       - master
+    paths:
+      - ".github/labels.yml"
+      - ".github/workflows/labeler.yml"
 
 jobs:
   labeler:
