--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -27,7 +27,7 @@
   color: cfd3d7
 - name: enhancement
   description: New feature or request
-  color: a2eeef
+  color: "888888"
 - name: github_actions
   description: Pull requests that update Github_actions code
   color: "000000"
