--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -58,6 +58,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+        
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
