--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,8 +1,10 @@
-name: Docs
+name: DeployDocs
 
 on:
   push:
-    branches: ["main"]
+    branches:
+      - main
+      - master
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -34,7 +36,6 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4.7.0
         with:
-          python-version: "3.11"
           cache: "poetry"
 
       - name: Install dependencies
