Read python-version from pyproject.toml

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -36,6 +36,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4.7.0
         with:
+          python-version-file: "pyproject.toml"
           cache: "poetry"
 
       - name: Install dependencies
