--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,11 +19,6 @@ jobs:
         with:
           fetch-depth: 2
 
-      - name: Set up Python
-        uses: actions/setup-python@v4.7.0
-        with:
-          python-version: "3.10"
-
       - name: Upgrade pip
         run: |
           pip install -c .github/workflows/constraints.txt pip
@@ -33,6 +28,12 @@ jobs:
         run: |
           pip install -c .github/workflows/constraints.txt poetry
           poetry --version
+
+      - name: Set up Python
+        uses: actions/setup-python@v4.7.0
+        with:
+          python-version-file: "pyproject.toml"
+          cache: "poetry"
 
       - name: Check if there is a parent commit
         id: check-parent-commit
