--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4.7.0
         with:
-          python-version-file: "pyproject.toml"
+          python-version: "3.11"
           cache: "poetry"
 
       - name: Install dependencies
