--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4.7.0
         with:
-          python-version-file: "pyproject.toml"
+          python-version: "3.11"
 
       - name: Upgrade pip
         run: |
