--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=arneso-ssb_arneso-pypitemplate-instance
-sonar.organization=arne-sorli
+sonar.organization=arneso-ssb
 sonar.host.url=https://sonarcloud.io
 
 sonar.sources=src/arneso_pypitemplate_instance
@@ -7,6 +7,5 @@ sonar.tests=tests
 
 sonar.python.version=3.10
 sonar.python.coverage.reportPaths=coverage.xml
-# sonar.python.xunit.reportPath=pytest-report.xml
 
 sonar.sourceEncoding=UTF-8
