--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -149,7 +149,13 @@ jobs:
         run: |
           nox --session=coverage -- xml
 
-      - name: Upload coverage report
+     - name: Print coverage report 1
+        run: |
+          pwd
+          ls
+          cat /github/workspace/coverage.xml
+
+     - name: Upload coverage report
         uses: codecov/codecov-action@v3.1.4
 
       - name: SonarCloud Scan
