--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -153,7 +153,7 @@ jobs:
         run: |
           pwd
           ls
-          cat /github/workspace/coverage.xml
+          cat coverage.xml
 
       - name: Upload coverage report
         uses: codecov/codecov-action@v3.1.4
