--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -164,3 +164,4 @@ jobs:
         # No need to run SonarCloud analysis if dependabot update or token not defined
         if: env.SONAR_TOKEN != '' && (github.actor != 'dependabot[bot]')
         uses: SonarSource/sonarcloud-github-action@v2.0.0
+        # Remove this comment
