--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,7 @@ source = ["arneso_pypitemplate_instance", "tests"]
 
 [tool.coverage.report]
 show_missing = true
-fail_under = 50
+fail_under = 80
 
 [tool.mypy]
 strict = true
@@ -70,16 +70,7 @@ src = ["src", "tests"]
 target-version = "py39"  # Minimum Python version supported
 
 # Ruff rules may be customized as desired: https://docs.astral.sh/ruff/rules/
-select = [
-    "A",    # prevent using keywords that clobber python builtins
-    "B",    # bugbear: security warnings
-    "E",    # pycodestyle
-    "F",    # pyflakes
-    "ISC",  # implicit string concatenation
-    "I",    # sort imports
-    "UP",   # alert you when better syntax is available in your python version
-    "RUF",  # the ruff developer's own rules
-]
+select = ["ALL"]
 ignore = [
     "ANN101", # Supress missing-type-self.
     "D100",   # Supress undocumented-public-module. Only doc of public api required.
