--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -145,6 +145,9 @@ jobs:
         with:
           name: coverage-data
 
+      - name: Display structure of downloaded files
+        run: ls -alR .
+
       - name: Combine coverage data and display human readable report
         run: |
           nox --session=coverage
