--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -156,13 +156,12 @@ jobs:
 
       # Need to fix coverage source paths for SonarCloud scanning in GitHub actions.
       # Replace root path with /github/workspace (mounted in docker container).
-      #- name: Override coverage source paths for SonarCloud
-      #   run: sed -i "s/<source>\/home\/runner\/work\/arneso-pypitemplate-instance\/arneso-pypitemplate-instance/<source>\/github\/workspace/g" coverage.xml
+      - name: Override coverage source paths for SonarCloud
+        run: sed -i "s/<source>\/home\/runner\/work\/arneso-pypitemplate-instance\/arneso-pypitemplate-instance/<source>\/github\/workspace/g" coverage.xml
 
       - name: Debug coverage
         run: |
           pwd
-          ls -al
           cat coverage.xml
 
       - name: SonarCloud Scan
