--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -96,10 +96,16 @@ jobs:
         run: |
           nox --python=${{ matrix.python }}
 
-      - name: Debug paths
+      - name: Debug paths not Windows
+        if: matrix.os != 'windows-latest'
         run: |
           pwd
           ls -al
+
+      - name: Debug paths Windows
+        if: matrix.os == 'windows-latest'
+        run: |
+          dir
 
       - name: Upload coverage data
         if: always() && matrix.session == 'tests'
