--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -167,8 +167,8 @@ jobs:
 
       # Need to fix coverage source paths for SonarCloud scanning in GitHub actions.
       # Replace root path with /github/workspace (mounted in docker container).
-#      - name: Override coverage source paths for SonarCloud
-#        run: sed -i "s/<source>\/home\/runner\/work\/arneso-pypitemplate-instance\/arneso-pypitemplate-instance/<source>\/github\/workspace/g" coverage.xml
+      - name: Override coverage source paths for SonarCloud
+        run: sed -i "s/<source>\/home\/runner\/work\/arneso-pypitemplate-instance\/arneso-pypitemplate-instance/<source>\/github\/workspace/g" coverage.xml
 
       - name: Debug coverage
         run: |
