Debug SonarCloud new sed

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ tests = ["tests", "*/tests"]
 [tool.coverage.run]
 branch = true
 source = ["arneso_pypitemplate_instance", "tests"]
+relative_files = true
 
 [tool.coverage.report]
 show_missing = true
