--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,6 +41,7 @@ jobs:
         uses: actions/setup-python@v5.1.1
         with:
           python-version: ${{ matrix.python }}
+          cache: pip
 
       - name: Upgrade pip
         run: |
