--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -64,3 +64,6 @@
 - name: "skip-changelog"
   description: Changes that should be omitted from the release notes
   color: ededed
+- name: removal2
+  description: Removals and Deprecations
+  color: 9ae7ea
