--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -156,6 +156,7 @@ jobs:
       - name: Create coverage report
         run: |
           nox --session=coverage -- xml
+          cat coverage.xml
 
       # Need to fix coverage source paths for SonarCloud scanning in GitHub actions.
       # Replace root path with /github/workspace (mounted in docker container).
