--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,8 +2,8 @@ sonar.projectKey=arneso-ssb_arneso-pypitemplate-instance
 sonar.organization=arneso-ssb
 sonar.host.url=https://sonarcloud.io
 
-sonar.sources=src/arneso_pypitemplate_instance
-sonar.tests=tests
+sonar.sources=src/arneso_pypitemplate_instance/
+sonar.tests=tests/
 
 sonar.python.version=3.10
 sonar.python.coverage.reportPaths=coverage.xml
