--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,10 +20,17 @@ jobs:
         with:
           fetch-depth: 2
 
+      - name: Get uv version from constraints
+        id: uv-version
+        run: |
+          UV_VERSION=$(grep "^uv==" .github/workflows/constraints.txt | cut -d'=' -f3)
+          echo "version=$UV_VERSION" >> $GITHUB_OUTPUT
+
       - name: Install uv
         uses: astral-sh/setup-uv@v6
         with:
           enable-cache: true
+          version: ${{ steps.uv-version.outputs.version }}
 
       - name: Set up Python
         uses: actions/setup-python@v5.6.0
