Improve use of uv/uvx in Github Actions

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          uv sync
+          uv sync --locked --only-dev
 
       - name: Build doc with Sphinx
         run: |
