--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,40 +43,19 @@ jobs:
         run: |
           echo "sha=$(git rev-parse --verify --quiet HEAD^)" >> $GITHUB_OUTPUT
 
-      - name: Install dependencies for version management
-        run: |
-          uv add --dev tomli-w
-
       - name: Detect and tag new version
         id: check-version
         if: steps.check-parent-commit.outputs.sha
         uses: salsify/action-detect-and-tag-new-version@v2.0.3
         with:
           version-command: |
-            bash -o pipefail -c "uv run python -c \"import tomllib; print(tomllib.load(open('pyproject.toml', 'rb'))['project']['version'])\""
+            bash -o pipefail -c "uvx --from=toml-cli toml get --toml-path=pyproject.toml project.version"
 
       - name: Bump version for developmental release
         if: (!steps.check-version.outputs.tag)
         run: |
-          uv run python -c "
-          import tomllib
-          import tomli_w
-          import time
-
-          with open('pyproject.toml', 'rb') as f:
-              data = tomllib.load(f)
-
-          current_version = data['project']['version']
-          version_parts = current_version.split('.')
-          version_parts[-1] = str(int(version_parts[-1]) + 1)
-          new_version = '.'.join(version_parts)
-          dev_version = f'{new_version}.dev.{int(time.time())}'
-
-          data['project']['version'] = dev_version
-
-          with open('pyproject.toml', 'wb') as f:
-              tomli_w.dump(data, f)
-          "
+          version=$(uvx --from=toml-cli toml get --toml-path=pyproject.toml project.version) &&
+          uvx --from=toml-cli toml set --toml-path=pyproject.toml project.version $version.dev.$(date +%s)
 
       - name: Build package
         run: |
