--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -55,11 +55,6 @@ jobs:
           version: ${{ steps.uv-version.outputs.version }}
           python-version: ${{ matrix.python }}
 
-      - name: Install Nox
-        run: |
-          uv tool install --with-requirements ${{ github.workspace }}/.github/workflows/constraints.txt nox
-          nox --version
-
       - name: Compute pre-commit cache key
         if: matrix.session == 'pre-commit'
         id: pre-commit-cache
@@ -87,7 +82,7 @@ jobs:
 
       - name: Run Nox
         run: |
-          nox --python=${{ matrix.python }}
+          uvx --constraints "${{ github.workspace }}/.github/workflows/constraints.txt" nox --python=${{ matrix.python }}
 
       - name: Upload coverage data
         if: always() && matrix.session == 'tests'
@@ -126,16 +121,6 @@ jobs:
           enable-cache: true
           version: ${{ steps.uv-version.outputs.version }}
 
-      - name: Set up Python
-        uses: actions/setup-python@v5.6.0
-        with:
-          python-version: "3.12"
-
-      - name: Install Nox
-        run: |
-          uv tool install --with-requirements ${{ github.workspace }}/.github/workflows/constraints.txt nox
-          nox --version
-
       - name: Download coverage data
         uses: actions/download-artifact@v4
         with:
@@ -144,11 +129,11 @@ jobs:
 
       - name: Combine coverage data and display human readable report
         run: |
-          nox --session=coverage
+          uvx --constraints "${{ github.workspace }}/.github/workflows/constraints.txt" nox --session=coverage
 
       - name: Create coverage report
         run: |
-          nox --session=coverage -- xml
+          uvx --constraints "${{ github.workspace }}/.github/workflows/constraints.txt" nox --session=coverage -- xml
 
       # Need to fix coverage source paths for SonarCloud scanning in GitHub actions.
       # Replace root path with /github/workspace (mounted in docker container).
