--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,34 @@ classifiers = [
   "Development Status :: 4 - Beta",
   "Typing :: Typed",
 ]
-dependencies = ["click (>=8.0.1)"]
+dependencies = [
+    "click (>=8.0.1)",
+    "dapla-toolbelt>=4.0.0",
+    "dapla-auth-client>=1.0.0",
+    "ipykernel>=6.15.3",
+    "pandas>=2.0.0",
+    "requests>=2.31.0",
+    "toml>=0.10.2",
+    "beautifulsoup4>=4.12.2",
+    "python-dotenv>=1.0.0",
+    "SQLAlchemy>=1.3.19",
+    "saspy>=5.2.1",
+    "ipywidgets>=8.1.1",
+    "pyarrow>=14.0.1",
+    "openpyxl>=3.1.5",
+    "oracledb>=2.3.0",
+    "chardet>=5.2.0",
+    "colorama>=0.4.6",
+    "colorlog>=6.9.0",
+    "pandas-stubs>=2.0.0.230412",
+    "types-requests>=2.31.0.10",
+    "types-toml>=0.10.8.7",
+    "types-beautifulsoup4>=4.12.0.20240511",
+    "types-colorama>=0.4.15.20240205",
+    "types-openpyxl>=3.1.5.20240719",
+    "pyarrow-stubs>=10.0.1.9",
+    "types-python-dateutil>=2.9.0.20250516,<3",
+]
 
 [project.urls]
 homepage = "https://github.com/arneso-ssb/arneso-pypitemplate-instance"
