--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ name = "arneso-pypitemplate-instance"
 version = "0.2.0"
 description = "Arneso Pypitemplate Instance"
 authors = [{ name = "Arne Sørli", email = "arne.sorli@ssb.no" }]
-requires-python = ">=3.10,<4.0"
-readme = "README.md"
 license = "MIT"
+readme = "README.md"
+requires-python = ">=3.10,<4.0"
 classifiers = [
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.10",
@@ -16,7 +16,9 @@ classifiers = [
   "Development Status :: 4 - Beta",
   "Typing :: Typed",
 ]
-dependencies = ["click (>=8.0.1)"]
+dependencies = [
+    "click>=8.0.1",
+]
 
 [project.urls]
 homepage = "https://github.com/arneso-ssb/arneso-pypitemplate-instance"
@@ -48,10 +50,6 @@ dev = [
     "myst-parser>=0.16.1",
     "deptry>=0.23.0",
 ]
-
-[build-system]
-requires = ["uv_build>=0.7.21,<0.8"]
-build-backend = "uv_build"
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
@@ -93,6 +91,7 @@ extend-exclude = [
     "docs/conf.py",
 ]
 
+# Ruff rules may be customized as desired: https://docs.astral.sh/ruff/rules/
 [tool.ruff.lint]
 select = ["ALL"]
 ignore = [
@@ -137,3 +136,7 @@ classmethod-decorators = ["classmethod", "validator", "root_validator", "pydanti
     "D103",
     "S101",    # asserts are encouraged in pytest
 ]
+
+[build-system]
+requires = ["uv_build>=0.7.21,<0.8"]
+build-backend = "uv_build"
