Fix uneccessary uv sync

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,9 +50,9 @@ jobs:
       - name: Bump version for developmental release
         if: (!steps.check-version.outputs.tag)
         run: |
-          uv version --bump patch &&
+          uv version --bump patch --frozen &&
           version=$(uv version --short) &&
-          uv version $version.dev.$(date +%s)
+          uv version $version.dev.$(date +%s) --no-sync
 
       - name: Build package
         run: |
