--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,7 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "monthly"
     open-pull-requests-limit: 99
     groups:
       github-action-dependencies:
@@ -12,18 +12,21 @@ updates:
   - package-ecosystem: "pip"
     directory: "/.github/workflows"
     schedule:
-      interval: "weekly"
+      interval: "monthly"
     open-pull-requests-limit: 99
     groups:
       workflows-dependencies:
         patterns:
           - "*"
-  - package-ecosystem: "uv"
+  - package-ecosystem: "pip"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "monthly"
+    versioning-strategy: lockfile-only
+    allow:
+      - dependency-type: "all"
     open-pull-requests-limit: 99
     groups:
-      python-dependencies:
+      poetry-dependencies:
         patterns:
           - "*"
