--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,27 +28,25 @@ jobs:
       - name: Check out the repository
         uses: actions/checkout@v4
 
-      - name: Get uv version from constraints
-        id: uv-version
-        shell: pwsh
+      - name: Install Poetry
         run: |
-          $UV_VERSION = (Get-Content .github/workflows/constraints.txt | Where-Object { $_ -match '^uv==' } | ForEach-Object { ($_ -split '==')[1] })
-          echo "version=$UV_VERSION" >> $env:GITHUB_OUTPUT
+          pipx install --pip-args "-c ${{ github.workspace }}/.github/workflows/constraints.txt" poetry
+          pipx inject poetry poetry-plugin-export
+          poetry --version
 
-      - name: Install uv
-        uses: astral-sh/setup-uv@v6
+      - name: Set up Python
+        uses: actions/setup-python@v5.6.0
         with:
-          enable-cache: true
-          version: ${{ steps.uv-version.outputs.version }}
           python-version: "3.12"
+          cache: "poetry"
 
       - name: Install dependencies
         run: |
-          uv sync --locked --only-dev
+          poetry install
 
       - name: Build doc with Sphinx
         run: |
-          uv run sphinx-build docs docs/_build
+          poetry run sphinx-build docs docs/_build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
