--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,29 +21,36 @@ Changelog = "https://github.com/arneso-ssb/arneso-pypitemplate-instance/releases
 [project.scripts]
 arneso-pypitemplate-instance = "arneso_pypitemplate_instance.__main__:main"
 
+[dependency-groups]
+# Type hint stubs should be placed in the dev dependency group
+dev = [
+    "pytest>=6.2.5",
+    "coverage[toml]>=7.11.3",
+    "deptry>=0.24.0",
+    "typeguard>=2.13.3",
+    "pygments>=2.10.0",
+    "xdoctest[colors]>=1.3.0",
+    "mypy>=1.18.2",
+]
+lint = [
+    "black[jupyter]>=25.11.0",
+    "darglint>=1.8.1",
+    "pre-commit>=4.4.0",
+    "pre-commit-hooks>=6.0.0",
+    "ruff>=0.14.5",
+]
+doc = [
+    "sphinx-autodoc-typehints>=3.5.2; python_version >= '3.11'",
+    "sphinx>=8.2.3; python_version >= '3.11'",
+    "sphinx-autobuild>=2025.8.25; python_version >= '3.11'",
+    "sphinx-click>=6.1.0; python_version >= '3.11'",
+    "furo>=2025.9.25; python_version >= '3.11'",
+    "myst-parser>=4.0.1; python_version >= '3.11'",
+] 
+
 [tool.poetry]
 classifiers = ["Development Status :: 4 - Beta"]
 requires-poetry = ">=2.0"
-
-[tool.poetry.group.dev.dependencies]
-pygments = ">=2.10.0"
-black = { extras = ["jupyter"], version = ">=23.1.0" }
-coverage = { extras = ["toml"], version = ">=6.2" }
-darglint = ">=1.8.1"
-furo = ">=2021.11.12"
-mypy = ">=0.930"
-pre-commit = ">=2.16.0"
-pre-commit-hooks = ">=4.1.0"
-ruff = ">=0.0.284"
-pytest = ">=6.2.5"
-sphinx = ">=6.2.1"
-sphinx-autobuild = ">=2021.3.14"
-sphinx-autodoc-typehints = ">=1.24.0"
-sphinx-click = ">=3.0.2"
-typeguard = ">=2.13.3"
-xdoctest = { extras = ["colors"], version = ">=0.15.10" }
-myst-parser = { version = ">=0.16.1" }
-deptry = ">=0.23.0"
 
 [tool.poetry.requires-plugins]
 poetry-plugin-export = ">=1.9"
@@ -135,5 +142,5 @@ classmethod-decorators = ["classmethod", "validator", "root_validator", "pydanti
 ]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
