--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,8 @@ lint = [
     "pre-commit>=4.4.0",
     "pre-commit-hooks>=6.0.0",
     "ruff>=0.14.5",
-    "ruamel.yaml<0.19",  # Needed to prevent building ruamel.yaml.clibz (pre-commit-hooks)
+    # Need to prevent building ruamel.yaml.clibz on Windows (no build tools)
+    "ruamel.yaml<0.19.0; sys_platform == 'win32'",
 ]
 doc = [
     "furo>=2025.9.25; python_version >= '3.11'",
