--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,9 +24,9 @@ arneso-pypitemplate-instance = "arneso_pypitemplate_instance.__main__:main"
 [dependency-groups]
 lint = [
     "black[jupyter]>=25.11.0",
-    "darglint>=1.8.1",
     "pre-commit>=4.4.0",
     "pre-commit-hooks>=6.0.0",
+    "pydoclint>=0.8.3",
     "ruff>=0.14.5",
 ]
 doc = [
@@ -46,9 +46,9 @@ doc = [
 dev = [
     # lint dependencies
     "black[jupyter]>=25.11.0",
-    "darglint>=1.8.1",
     "pre-commit>=4.4.0",
     "pre-commit-hooks>=6.0.0",
+    "pydoclint>=0.8.3",
     "ruff>=0.14.5",
 
     # doc dependencies
@@ -102,6 +102,15 @@ pretty = true
 show_column_numbers = true
 show_error_context = true
 
+[tool.pydoclint]
+style = "google"
+exclude = '\.git|\.nox'
+arg-type-hints-in-docstring = false
+check-return-types = false
+check-yield-types = false
+allow-init-docstring = true
+quiet = true
+
 [tool.ruff]
 force-exclude = true  # Apply excludes to pre-commit
 show-fixes = true
@@ -140,6 +149,7 @@ ignore = [
     "E501",   # Supress line-too-long warnings: trust black's judgement on this one.
     "PLR2004", # Allow to compare with unnamed numerical constants.
 ]
+external = ["DOC"]  # Avoiding removing any codes starting with `DOC` from any `# noqa` directives.
 
 [tool.ruff.lint.isort]
 force-single-line = true
